welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:8: error: value =+ is not a member of Int
			y=+1
                         ^