welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.code
def withoutDoubles(die1:Int, die2:Int, noDoubles:Boolean):Int = {
	var x,y:Int=0;
	if (noDoubles==true&&die1==die2) {
		if (die1 !=6) {
			y==die1+1
		}
		else {
			y=+1
		}
		x=y+die2
	}
	else x=die1+die2;
	return x
}
